# lix

./: configure.ac  docker.nix  flake.nix  meson.build  meson.options  package.nix
bench/: bench.sh  substring.nix
doc/manual/: generate-builtin-constants.nix  generate-builtins.nix  generate-manpage.nix  generate-xp-features-shortlist.nix  generate-xp-features.nix  utils.nix
maintainers/: build-release-notes.nix
meson/: cleanup-install.bash
nix-support/: nixfmt.nix
perl/: default.nix
src/: meson.build
src/libcmd/: built-path.cc  built-path.hh  cmd-profiles.cc  cmd-profiles.hh  command.cc  command.hh  common-eval-args.cc  common-eval-args.hh  editor-for.cc  editor-for.hh  installable-attr-path.cc  installable-attr-path.hh  installable-derived-path.cc  installable-derived-path.hh  installable-flake.cc  installable-flake.hh  installable-value.cc  installable-value.hh  installables.cc  installables.hh  legacy.cc  legacy.hh  local.mk  markdown.cc  markdown.hh  meson.build  repl-interacter.cc  repl-interacter.hh  repl-overlays.nix  repl.cc  repl.hh
src/libexpr/: attr-path.cc  attr-path.hh  attr-set.cc  attr-set.hh  eval-cache.cc  eval-cache.hh  eval-error.cc  eval-error.hh  eval-inline.hh  eval-settings.cc  eval-settings.hh  eval.cc  eval.hh  fetchurl.nix  function-trace.cc  function-trace.hh  gc-small-vector.hh  get-drvs.cc  get-drvs.hh  imported-drv-to-derivation.nix  json-to-value.cc  json-to-value.hh  lexer.l  local.mk  meson.build  nixexpr.cc  nixexpr.hh  parser-state.hh  parser.y  paths.cc  pos-idx.hh  pos-table.hh  primops.cc  primops.hh  print-ambiguous.cc  print-ambiguous.hh  print-options.hh  print.cc  print.hh  repl-exit-status.hh  (+8 more)
src/libexpr/c/: meson.build  nix_api_value.cc
src/libexpr/flake/: call-flake.nix  config.cc  flake.cc  flake.hh  flakeref.cc  flakeref.hh  lockfile.cc  lockfile.hh  meson.build
src/libexpr/parser/: change_head.hh  grammar.hh  parser.cc  state.hh
src/libexpr/primops/: arithmetic.cc  attrset.cc  context.cc  control.cc  debug.cc  derivation.cc  derivation.nix  fetchClosure.cc  fetchMercurial.cc  fetchTree.cc  fromTOML.cc  hash.cc  import.cc  json.cc  list.cc  path.cc  string.cc  system.cc  toXML.cc  types.cc
src/libexpr/value/: context.cc  context.hh
src/libfetchers/: attrs.cc  attrs.hh  cache.cc  cache.hh  fetch-settings.cc  fetch-settings.hh  fetch-to-store.cc  fetch-to-store.hh  fetchers.cc  fetchers.hh  git.cc  github.cc  indirect.cc  mercurial.cc  meson.build  path.cc  registry.cc  registry.hh  tarball.cc
src/libmain/: common-args.cc  common-args.hh  loggers.cc  loggers.hh  meson.build  progress-bar.cc  progress-bar.hh  shared.cc  shared.hh  stack.cc
src/libstore/: binary-cache-store.cc  content-address.cc  daemon.cc  derivations.cc  derived-path-map.cc  derived-path.cc  downstream-placeholder.cc  legacy-ssh-store.cc  local-fs-store.cc  local-store.cc  local-store.hh  meson.build  misc.cc  outputs-spec.cc  path-info.cc  path-references.cc  path-with-outputs.cc  remote-store.cc  store-api.cc  worker-protocol.cc
src/libstore/c/: meson.build
src/libutil/: archive.cc  archive.hh  escape-string.cc  escape-string.hh  generator.hh  hash.cc  logging.hh  meson.build  overloaded.hh  position.cc  serialise.cc  serialise.hh  source-path.hh  util.cc  util.hh
src/libutil/c/: meson.build
src/nix/: add-to-store.cc  app.cc  build.cc  dump-path.cc  eval.cc  flake.cc  hash.cc  log.cc  main.cc  meson.build  profile.cc
src/nix-build/: nix-build.cc
src/nix-channel/: unpack-channel.nix
src/nix-env/: buildenv.nix  meson.build  nix-env.cc
src/nix-instantiate/: nix-instantiate.cc
src/nix-store/: nix-store.cc
tests/functional/: local.mk  meson.build  phantom-referrers-gc.sh  test-repl-characterization.sh
tests/functional/common/: vars-and-functions.sh.in
tests/functional/repl_characterization/: local.mk  repl_characterization.cc  test-session.cc  test-session.hh
tests/functional/repl_characterization/data/: basic.ast  basic_tidied.test  regression_l145.nix  regression_l145.test
tests/unit/libexpr/: primops.cc
tests/unit/libexpr-support/tests/: libexpr.hh
tests/unit/libmain/: progress-bar.cc
tests/unit/libutil/: escape-string.cc  generator.cc  local.mk  paths-setting.cc  serialise.cc
tests/unit/libutil-support/tests/: cli-literate-parser.cc  cli-literate-parser.hh
