# vim: filetype=meson
option('gc', type : 'feature',
  description : 'enable garbage collection in the Nix expression evaluator (requires Boehm GC)',
)
# TODO(Qyriad): is this feature maintained?
option('embedded-sandbox-shell', type : 'feature',
  description : 'include the sandbox shell in the Nix bindary',
)

option('cpuid', type : 'feature',
  description : 'determine microarchitecture levels with libcpuid (only relevant on x86_64)',
)

option('seccomp-sandboxing', type : 'feature',
  description : 'build support for seccomp sandboxing (recommended unless your arch doesn\'t support libseccomp, only relevant on Linux)',
)

option('store-dir', type : 'string', value : '/nix/store',
  description : 'path of the Nix store',
)

option('sandbox-shell', type : 'string',
  description : 'path to a statically-linked shell to use as /bin/sh in sandboxes (usually busybox)',
)
